@@ -71,8 +71,10 @@ extensions to popular open source scripting languages and web browsers.</p>
   <li>Archive based deployment Model (for services and modules)</li>
   <li>Code generation for WSDL using Java WSDL2Code tool</li>
   <li>ADB support (with Java WSDL2Code tool)</li>
-  <li>Changed double pointer environment parameters into pointer parameters
-    to improve efficiency</li>
+  <li>WS-Security usernameToken support</li>
+  <li>Initial implementation of the XML Schema parser (To be used in WSDL parser and REST support)</li>
+  <li>Initial implementation of WSDL parser (To be used in dynamic invocation)</li>
+  <li>Changed double pointer environment parameters into pointer parameters to improve efficiency</li>
 </ol>
 
 <h4>Un-Implemented Architecture Features (TBD in 1.0)</h4>
